--- a/css/styles.css
+++ b/css/styles.css
@@ -30,13 +30,13 @@
     max-width: 250px;
     min-width: 250px;
 }
-#pricing .row{
+#pricing .card_row{
+    width: 100%;
     flex-wrap: wrap;
 }
 .pricing_card{
     width: 100%;
     max-width: 300px;
-    min-width: 300px;
     display: flex;
     flex-direction: column;
 }
